[package]
name = "audio-conv"
version = "0.0.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
gstreamer-audio = { version = "0.16", features = ["v1_10"] }
gstreamer = { version = "0.16", features = ["v1_10"] }
gstreamer-base = { version = "0.16", features = ["v1_10"] }
glib = "0.10"
futures = "0.3"
num_cpus = "1"
walkdir = "2"
libc = "0.2"
anyhow = "1"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
globset = "0.4"
derive_more = "0.99"
