[package]
name = "audio-conv"
version = "1.3.1"
edition = "2021"
description = "Copies directory structure and converts audio files in it"
authors = ["Thomas Heck <t@b128.net>"]
repository = "https://gitlab.com/chpio/audio-conv"
license = "MIT OR Apache-2.0"
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::audio",
    "multimedia::encoding",
]
keywords = ["audio", "conversion", "opus", "flac"]
include = [
    "/src/**/*",
    "/example.audio-conv.yaml",
    "/README.md",
    "/CHANGELOG.md",
]

[dependencies]
gstreamer = { version = "0.23", features = ["v1_16"] }
gstreamer-base = { version = "0.23", features = ["v1_16"] }
gstreamer-audio = { version = "0.23", features = ["v1_16"] }
glib = "0.20"
futures = "0.3"
num_cpus = "1"
walkdir = "2"
libc = "0.2"
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
globset = "0.4"
derive_more = "0.99"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync", "rt", "macros", "time", "fs", "io-util"]
